revised endnote.bib and check details

--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -28,7 +28,7 @@ authornote: |
   Authors contriubtion: HCP, JS, & KP design the study, HCP collected the data, HCP analyzed the data and drafted the manuscript. All authors read and agreed upon the current version of the manuscripts.
 
 abstract: |
- Evidence for the prioritization of moral information in cognitive processes is mixed. We examined this question using a series of ten experiments where participants first learned associations between moral characters and geometric shapes and then performed simple speed tasks. In the first five experiments, we tested and validated prioritized responses to good characters over bad and neutral characters. To pin down the processes that are critical to the prioritization effects, in the remaining five experiments, we examined two opposing hypotheses: the valence hypothesis suggests that a general positivity bias towards all underpins the effects, while the self-binding account posits that self-referencing, rather than other-referencing is the fundamental driver of the effects. The data support the latter. Together, these results show a robust prioritization effect of good character through self-referencing processes, indicating the innate connection between morality and oneself and how humans use self-reference to explore the world and learn morality.
+ Evidence for the prioritization of moral information in cognitive processes is mixed. We examined this question using a series of eleven experiments where participants first learned associations between moral characters and geometric shapes and then performed simple speed tasks. In the first six experiments, we tested and validated prioritized responses to good characters over bad and neutral characters. To pin down the processes that are critical to the prioritization effects, in the remaining five experiments, we examined two opposing hypotheses: the valence hypothesis suggests that a general positivity bias towards all underpins the effects, while the self-binding account posits that self-referencing, rather than other-referencing is the fundamental driver of the effects. The data support the latter. Together, these results show a robust prioritization effect of good character through self-referencing processes, indicating the innate connection between morality and oneself and how humans use self-reference to explore the world and learn morality.
   
  <!-- https://tinyurl.com/ybremelq -->
   
@@ -102,22 +102,22 @@ Summary:
 
 Morality is central to human life [@haidt_morality_2010]. Thus, gathering information about morality efficiently and accurately is crucial for individuals to navigate the social world [@brambilla_primacy_2021]. The importance of morality naturally leads to the hypothesis that morality-related information is prioritized in information processing, especially when attentional resources are limited. This hypothesis is plausible because a large volume of studies has reported that valuable stimuli are prioritized, e.g., threatening stimuli [e.g., @ohman_face_2001], rewards [@anderson_value_2011; @sui_more_2015], or self-related stimuli [@sui_self_attention_2019]. Consistent with this hypothesis, a few studies reported a prioritization effect of negative moral information in visual processing: negative moral trait words  [@fiske_attention_1980; @ybarra_young_2001; @gantman_moral_2014] and faces associated with bad behaviors [@anderson_visual_2011; @eiserbeck_visual_2020] attracted more attention and were responded faster. 
 
-However, evidence for this negative moral bias effect is mixed. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of the negative moral bias effect is questioned, a direct replication study failed to support the conclusion that faces associated with bad social behaviors dominate visual awareness [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors, such as the priming effect [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016] or differences between lexical characteristics [Larsen et al., 2006]. As a result, while the importance of morality is widely recognized and there is initial evidence for a negative moral bias, whether moral information is prioritized in perceptual processing is still an open question. 
+However, evidence for this negative moral bias effect is mixed. First, the opposite effect was also reported. For example, @shore_social_2013 found that faces with positive interaction in a trust game were prioritized in the pre-attentive process. Also, Abele and Bruckmueller found faster responses to moral words were not moderated by valence [@abele_bigger_2011]. Second, the robustness of the negative moral bias effect is questioned, a direct replication study failed to support the conclusion that faces associated with bad social behaviors dominate visual awareness [eg., @stein_no_2017]. Third, the prioritization effect of morality might be confounded with other factors, such as the priming effect [@firestone_cognition_2015; @firestone_moral_2016; @jussim_interpretations_2016] or differences between lexical characteristics [@larsen_lexical_2006]. As a result, while the importance of morality is widely recognized and there is initial evidence for a negative moral bias, whether moral information is prioritized in perceptual processing is still an open question. 
 
-Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a task where participants first acquired moral meanings of geometric shapes during the instruction phase and then performed a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can rapidly learn based on verbal instructions [e.g., @cole_nbr_2017]. This instruction-based associative learning task is widely used in aversive learning, value-based learning, and other tasks [@atlas_ann_rev_2023; @deltomme_instructed_2018; cole_nbr_2017]. Unlike previous studies relies on faces or words [e.g., @bortolon_self-face_2018, @yaoi_does_2021], stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and valence of moral characters across different participants, we controlled the effect of these shapes on the matching task. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Finally, we conducted a series of control experiments and established that moral content, rather than other factors such as familiarity of stimuli, drove the prioritization effects. 
+Here, we conducted a series of well-controlled experiments to examine the prioritization effect of morality and its potential mechanisms. To eliminate the priming effect and other potential confounding factors, we employed a task where participants first acquired moral meanings of geometric shapes during the instruction phase and then performed a simple perceptual matching task. The instruction-based associative learning task is based on the fact that humans can rapidly learn based on verbal instructions [e.g., @cole_nbr_2017]. This instruction-based associative learning task is widely used in aversive learning, value-based learning, and other tasks [@atlas_ann_rev_2023; @deltomme_instructed_2018; @cole_nbr_2017]. Unlike previous studies relies on faces or words [e.g., @bortolon_self-face_2018; @yaoi_does_2021], stimuli in the current study are geometric shapes, whose moral meanings were acquired right before the perceptual matching task. By counter-balancing associations between shapes and valence of moral characters across different participants, we controlled the effect of these shapes on the matching task. Also, in the matching task, we repeatedly present a few pairs of shapes and labels to participants, the results can not be explained by semantic priming [@unkelbach_chapter_2020], which is the center of the debate on previous results [@gantman_moral_2015; @gantman_see_2016; @firestone_cognition_2015; @Firestone_2016_BBS; @jussim_interpretations_2016]. Finally, we conducted a series of control experiments and established that moral content, rather than other factors such as familiarity of stimuli, drove the prioritization effects. 
  
-To pin down the factors that are central to the prioritization effects, two competing hypotheses were examined. One is the valence-based account, suggesting that a general positivity bias towards all underpins the prioritization effects. In fact, the account has been applied to explain not only positivity biases but also negativity biases. For example, the negative bias toward moral information was explained by a threat detection mechanism which might be general for all negative information [@anderson_value_2011]. The positive bias toward moral information, on the other hand, was explained by the positive valence of the stimuli because the stimuli imply potential benefits [@shore_social_2013]. However, these explanations often ignore the fact that valence is subjective *per se* [@juechems_where_2019]. That is, being related to a person is the premise of a stimulus or outcome being of value to the person. The subjective value is “a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers refer to it as “valence”, i.e., positive or negative [@carruthers_valence_2021]. The subjectivity of valence leads to an alternative explanation: self-binding account [@sui_tics_2015]. The self-binding account suggests that merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015], especially for positive information [@Hu_2020_goodme]. According to the self-binding account, the prioritization of good character is a result of spontaneous self-referencing.
+To pin down the factors that are central to the prioritization effects, two competing hypotheses were examined. One is the valence-based account, suggesting that a general positivity bias towards all underpins the prioritization effects. In fact, the account has been applied to explain not only positivity biases but also negativity biases. For example, the negative bias toward moral information was explained by a threat detection mechanism which might be general for all negative information [e.g., @fiske_attention_1980]. The positive bias toward moral information, on the other hand, was explained by the positive valence of the stimuli because the stimuli imply potential benefits [@shore_social_2013]. However, these explanations often ignore the fact that valence is subjective *per se* [@juechems_where_2019]. That is, being related to a person is the premise of a stimulus or outcome being of value to the person. The subjective value is “a broader concept that refers to the personal significance or importance that a person assigns to a particular stimulus or outcome” and when the outcome is affective or emotional, researchers refer to it as “valence”, i.e., positive or negative [@carruthers_valence_2021]. The subjectivity of valence leads to an alternative explanation: self-binding account [@sui_tics_2015]. The self-binding account suggests that merely associating with the self can prioritize stimuli in perception, attention, working memory, and long-term memory [@sui_self_attention_2019; @sui_tics_2015], especially for positive information [@Hu_2020_goodme]. According to the self-binding account, the prioritization of good character is a result of spontaneous self-referencing.
 
 To test the valence account and self-binding account in the prioritization effect of good character, we manipulated self-relevance and instructed participants on which moral character is self-referencing and which is not. We then tested whether the prioritization of moral character is by valence or by the associations between self-relevance and moral valence. The results revealed that the prioritization effect only occurred when shapes of good characters referred to the self of participants. We confirmed these results in the subsequent experiments, where shapes of good characters did not explicitly refer to the self or others but were merely presented with labels of the self or others. Together, these data revealed a mutual facilitation effect of good character and the self, suggesting a spontaneous self-referential process as a novel mechanism underlying the prioritization of good character in perceptual matching.
 
 <!-- 
-we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first five experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
+we attempted to distinguish these two possibilities by a social associative learning task in which physical features had minimal influences — participants performed a perceptual matching task after associated different moral characters (good, neutral, and bad) with different geometric shapes. If there is a positivity effect, there should be an advantage for shapes associated with good character over shapes associated with neutral or bad shapes. If there is a negativity effect, the advantage should be occur on shapes associated with bad characters. The first six experiments and two additional follow-up experiments provided strong evidence for good character effect in the current paradigm.
 
 The positivity effect consistent with previous studies where positivity effect of social trait words were found [@anselmi_positive_2011; @bargh_generality_1992; @unkelbach_good_2010]. However, the effect could not be explained by the similarity hypothesis [@unkelbach_chapter_2020] because we only used three stimuli. There are two possibility explanations. The first one is the value-based attention account, which suggests that stimuli that are valuable to us are prioritized [@anderson_neurobiology_2019]. In our experiments, the good character label "good person" may represent an indirect but valuable stimuli because, in social life, a good other is usually more valuable than an bad other [@abele_agency_2007]. Another possibility is derived from social categorization theory, which suggested that we automatically categorize others as in-group or out-group [@turner_rediscovering_1987]. Moral character is an important criterion for social categorization [@mchugh_moral_2021; @descioli_side_taking_2016]. However, the above four experiments could not distinguish between these two possibilities, because "good person" could both be rewarding and be categorized as in-group member. Given that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_overlap_2020] are prioritized when using social associative learning paradigm, we further tested these two possibilities in new experiments.
 
-To distinguish the value-based account and the social categorization explanations, we introduced the identity (self- vs. other-referential) of moral character as an addition independent variable in exp 3a, 3b, and 6b. Now moral valence is orthogonal to the identity. In this case, the identity of moral character information become salient and participants are less likely to spontaneously categorize a good-other as an extension of self, but the value of good-person still exists. If the positivity effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized. 
+To distinguish the value-based account and the social categorization explanations, we introduced the identity (self- vs. other-) of moral character as an addition independent variable in exp 3a, 3b, and 6b. Now moral valence is orthogonal to the identity. In this case, the identity of moral character information become salient and participants are less likely to spontaneously categorize a good-other as an extension of self, but the value of good-person still exists. If the positivity effect was driven by social categorization theory, then participants prioritize good-self but not good-other. If the value-based attention theory is true, then, both good-self and good-other are prioritized, or maybe good-other are even more prioritized. 
 
-Although the introduction of self- and other-referential processing provided evident that value-based account can not explain the good-character effect, it might introduce the good-self effect, i.e., the good-self is prioritized over all the other stimuli. This effect, if true, may suggest underlying mechanisms other than social-categorization. For example, the moral true self account. Moral true self view suggested that moral self if the true self [@strohminger_true_2017]. Therefore, even good-self can be viewed as categorized to in-group, it can also be viewed as the core of the self and it is the anchor of all the other effects.
+Although the introduction of self- and other-referencing processing provided evident that value-based account can not explain the good-character effect, it might introduce the good-self effect, i.e., the good-self is prioritized over all the other stimuli. This effect, if true, may suggest underlying mechanisms other than social-categorization. For example, the moral true self account. Moral true self view suggested that moral self if the true self [@strohminger_true_2017]. Therefore, even good-self can be viewed as categorized to in-group, it can also be viewed as the core of the self and it is the anchor of all the other effects.
 
 To test the moral true self view and the social-categorization account, we designed two complementary experiments. In experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiments can be used to distinguish the moral-self view and social categorization" account. If moral-self view is true, then, in both experiments, good-self will show advantage over all other stimuli, and there will be no other effects. More specifically, in experiment 4a, where only the self-referential processing is task-relevant, there will be advantage for good as task-irrelevant condition than when bad or neutral character as task-irrelevant for the self conditions, while there is no other effects; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition, and no other effects. If social categorization is true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good effect in self conditions, this prediction is the same as the moral self-view; it predicts a reverse good effect in other condition because good and other a conflict in terms of social-categorization, this prediction is different from the "good-self" anchor account; however, for experiment 4b, it predicts no identity effect in the good-person condition because both self and other are in the good group.
 
@@ -378,7 +378,7 @@ p_dprime1 <- df_m1_plot_sdt %>%
         labs(x=expression('Posteior distribution of '~italic(d)~' prime')) + 
         scale_colour_brewer(palette = "Dark2") +
         scale_fill_brewer(palette = "Dark2") +
-        theme_apa()
+        theme_apa(base_size = 20)
 
 # define facet titles
 contrast_names_m_sdt <- c(`diff_GN_dprm` = "Good vs Neutral", 
@@ -400,7 +400,7 @@ p_dprime1_diff <- df_m1_plot_sdt_diff %>%
         facet_wrap( ~ term_diff, # scales = "free_y",
                     nrow = 1,
                     labeller = as_labeller(contrast_names_m_sdt)) + # label_parsed
-        theme_apa() + 
+        theme_apa(base_size = 20) + 
         theme(strip.text.x = element_text(size = 8)) # colour = "orange", angle = 90))
 
 ### get results that will be reported in the text
@@ -549,7 +549,7 @@ p_rt1 <- df_m1_plot_rt %>%
         labs(x=expression('Posteior distribution of reaction times')) + 
         scale_colour_brewer(palette = "Dark2") +
         scale_fill_brewer(palette = "Dark2") +
-        theme_apa()
+        theme_apa(base_size = 20)
 
 df_m1_plot_rt_diff_wide <- df_m1_plot_rt %>%
         tidyr::pivot_wider(names_from = c(term), values_from = value) %>%   # long to wide
@@ -590,7 +590,7 @@ p_rt1_diff <- df_m1_plot_rt_diff %>%
               # scales = "free_y", 
               nrow = 1,
               labeller = as_labeller(contrast_names_m_rt))  + # label_parsed
-        theme_apa() + 
+        theme_apa(base_size = 20) + 
         theme(strip.text.x = element_text(size = 8)) # colour = "orange", angle = 90))
 
 df_rt1_diff_hdi <- df_m1_plot_rt_diff %>%
@@ -653,7 +653,7 @@ bayestestR::sexit(df_m1_plot_rt_diff_wide[,c(6:7,9:10)])
 ```
 
   <!-- plot all graphs form the first part together -->
-(ref:fig1-caption) Effect of moral character on perceptual matching. (A) Experimental level (five experiments, with eight independent samples) and population level posterior distributions of RT under different conditions; (B) Experimental level and population level posterior distributions of *d*-prime under different conditions; (C) Experimental level and population level posterior distributions of the RT differences between conditions (left, Good vs. Neutral; right, Bad vs. Neutral); (D) Experimental level and population level posterior distributions of the *d*-prime differences between conditions (left, Good vs. Neutral; right, Bad vs. Neutral).
+(ref:fig1-caption) Effect of moral character on perceptual matching. (A) Experimental level (six experiments, with eight independent samples) and population level posterior distributions of RT under different matching conditions; (B) Experimental level and population level posterior distributions of *d*-prime under different conditions; (C) Experimental level and population level posterior distributions of the RT differences between conditions (left, Good vs. Neutral; right, Bad vs. Neutral); (D) Experimental level and population level posterior distributions of the *d*-prime differences between conditions (left, Good vs. Neutral; right, Bad vs. Neutral).
 
 ```{r plot-bayes-meta-1, fig.cap="(ref:fig1-caption)", fig.height=15, fig.width=18, warning=FALSE}
 library(patchwork)
@@ -874,7 +874,7 @@ test_res_sdt_ms <- bayestestR::sexit(df_ms_sdt_m1_plot_diff[5:13])
 test_res_sdt_ms
 ```
 
-For the *d* prime, we found an interaction between the moral valence and self-relevance: the good-neutral differences are larger for the self-referencing condition than for the other-referencing condition, the difference ($median_{diff}$ = 0.48, 95% HDI [-0.62, 1.65]) has a 93.04% probability of being positive (> 0), 91.92% of being significant (> 0.05). However, the bad-neutral differences ($median_{diff}$ = 0.0087, 95% HDI [-0.96, 1.00]) only have a 51.85% probability of being positive (> 0), 41.29% of being significant (> 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referencing conditions but not other-referential conditions. The estimated *d* prime for good-self was greater than neutral-self ($median_{diff}$ = 0.54, 95% HDI [-0.30, 1.41]), with a 95.99% probability of being positive (> 0), 95.36% of being significant (> 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \@ref(fig:plot-bayes2), B, D). 
+For the *d* prime, we found an interaction between the moral valence and self-relevance: the good-neutral differences are larger for the self-referencing condition than for the other-referencing condition, the difference ($median_{diff}$ = 0.48, 95% HDI [-0.62, 1.65]) has a 93.04% probability of being positive (> 0), 91.92% of being significant (> 0.05). However, the bad-neutral differences ($median_{diff}$ = 0.0087, 95% HDI [-0.96, 1.00]) only have a 51.85% probability of being positive (> 0), 41.29% of being significant (> 0.05). Further analyses revealed that the prioritization effect of good character (as compared to neutral) only appeared for self-referencing conditions but not other-referencing conditions. The estimated *d* prime for good-self was greater than neutral-self ($median_{diff}$ = 0.54, 95% HDI [-0.30, 1.41]), with a 95.99% probability of being positive (> 0), 95.36% of being significant (> 0.05). The differences between bad-self and neutral-self, good-other and neutral-other, and bad-other and neutral-other are all centered around zero (see Figure \@ref(fig:plot-bayes2), B, D). 
 
 ```{r second meta rt, echo=FALSE, results='hide', warning=FALSE}
 # fit a three-level hierarchical model for RT, didn't specify the prior, lognormal, dummy coding, both match and mismatch trials
@@ -1939,13 +1939,13 @@ p_exp4a_rt1 + exp4a_sdt_p + p_exp4b_rt1 + exp4b_sdt_p + p_exp4a_rt_diff_val + p_
 The same trend appeared for the RT data. For shapes associated with good character, having a "self" inside shapes reduced the reaction times as compared to having an "other" inside the shapes ($mean_{diff}$ = -55, 95% HDI [-75, -35]) has a 100% probability of being negative (< 0) and 100.00% of being significant (< -0.05). However, when the shapes were associated with the neutral character, having a "self" inside shapes increased the RTs: $mean_{diff}$ = 11, 95% HDI [1, 21]) has a 98.20% probability of being positive (> 0) and 98.15% of being significant (> 0.05). While having "self" slightly increased the RT than having "other" inside the shapes for the bad character: $mean_{diff}$ = 5, 95% HDI [-17, 27]) has a 69.45% probability of being positive (> 0) and 69.27% of being significant (> 0.05), See Figure \@ref(fig:plot-exp4-all).
 
 # Discussion
-In this study, we investigated the primacy of morality in cognitive processes through systematically manipulating the factors that are central to the information processing of morality. First, we found a robust prioritization of good character in response times and *d*’ scores for the shape-label matching tasks across experiments. Second, to pinpoint the underlying processes of the effect, the analyses revealed that a self-referencing process was the fundamental driver of these effects, consistent with the self-binding account; that is, when a stimulus refers to the self, activation of self-representation enhances the binding of external input with internal knowledge through which self-related information can be integrated and optimized. The valence account, on the other hand, which posits that the prioritization effect was derived from a general positivity bias towards all (self and others), was not supported by the findings. Importantly, the prioritization effects emerged regardless of whether the relationship between moral character and oneself was task relevant. Collectively, humans tend to attribute moral character to themselves rather than others, leading to prioritized responses to self perceived moral character in decision making. 
+In this study, we investigated the primacy of morality in cognitive processes through systematically manipulating the factors that are central to the information processing of morality. First, we found a robust prioritization of good character in response times and *d*’ scores for the shape-label matching tasks across experiments. Second, to pinpoint the underlying processes of the effect, the analyses revealed that a self-referencing process was the fundamental driver of these effects, consistent with the self-binding account; that is, when a stimulus refers to the self, activation of self-representation enhances the binding of external input with internal knowledge through which self-related information can be integrated and optimized. The valence account, on the other hand, which posits that the prioritization effect was derived from a general positivity bias towards all (self and others), was not supported by the findings. Importantly, the prioritization effects emerged regardless of whether the relationship between moral character and oneself was task relevant. Collectively, participants tend to attribute moral character to themselves rather than others, leading to prioritized responses to self perceived moral character in decision making. 
 
-The current study provided robust evidence for the prioritization of good character in perceptual decision-making. Though the primacy of morality has been argued in social psychology, whether morality is prioritized in information processing has been disputed. For instance, [@anderson_visual_2011] reported that faces associated with bad social behavior capture attention more rapidly, but an independent team failed to replicate the effect [@stein_no_2017]. In another study, @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally. But this effect may be caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. To overcome this issue, we employed a shape-label matching task to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired during the instruction phase, semantic priming from pre-existed knowledge was impossible [@lee_pre-existing_2021]. Second, there were only a few pairs of stimuli that were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the perceived prioritization of good character. These results are in line with a growing literature on the social and relational nature of perception (@xiao_perceiving_2016; @freeman_chapter_2020; ＠hafri_perception_2021).
+The current study provided robust evidence for the prioritization of good character in perceptual decision-making. Though the primacy of morality has been argued in social psychology, whether morality is prioritized in information processing has been disputed. For instance, @anderson_visual_2011 reported that faces associated with bad social behavior capture attention more rapidly, but an independent team failed to replicate the effect [@stein_no_2017]. In another study, @gantman_moral_2014 found that moral words are more likely to be judged as words when it was presented subliminally. But this effect may be caused by semantic priming instead of morality [@firestone_cognition_2015; @jussim_interpretations_2016]. To overcome this issue, we employed a shape-label matching task to eliminate the semantic priming effect for two reasons. First, associations between shapes and moral characters were acquired during the instruction phase, semantic priming from pre-existed knowledge was impossible [@lee_pre-existing_2021]. Second, there were only a few pairs of stimuli that were used and each stimulus represented different conditions, making it impossible for priming between trials. Importantly, a series of control experiments (1b, 1c, and 2) excluded other confounding factors such as familiarity, presenting sequence, or words-based associations, suggesting that it was the moral content that drove the perceived prioritization of good character. These results are in line with a growing literature on the social and relational nature of perception [@hafri_perception_2021; @xiao_perceiving_2016].
 
 The prioritization of good character found in the current study was incongruent with previous moral perception studies, which typically reported a negativity bias, i.e., information related to bad character is processed preferentially [@anderson_visual_2011; @eiserbeck_visual_2020]. This discrepancy may result from different task types employed: while in many moral perception studies, the participants were asked to detect the existence of a stimulus, the current task asked participants to judge the associations between a shape and a person. In other words, previous studies targeted the early stages of perception, while the current task focused more on perceptual decision-making, consistent with previous work [@sui_boundaries_2013]. This discrepancy is consistent with the positivity bias in studies with emotional stimuli [@pool_attentional_2016].
 
-The current study expanded previous moral perception studies by testing a novel account that self-referencing processing is the critical driver of the effects. Our results revealed that prioritization of good character is modulated by self-relevance: good character was prioritized when it was referred to oneself. In contrast, good character information was not prioritized when it was referred to others. The modulation effect of self-relevance was amplified when the relationshipbetween moral character and oneself was explicit, consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_goodme]. More importantly, the effect persisted even when the relationship between moral character and oneself was task-irrelevant, indicating  an implicit self-referencing process emerged from presenting good character and self-related information in the same display. A possible explanation for this spontaneous self-referencing of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020; @stanley_remembering_2019], with implications for the quality of life and wellbeing. 
+The current study expanded previous moral perception studies by testing a novel account that self-referencing processing is the critical driver of the effects. Our results revealed that prioritization of good character is modulated by self-relevance: good character was prioritized when it was referred to oneself. In contrast, good character information was not prioritized when it was referred to others. The modulation effect of self-relevance was amplified when the relationship between moral character and oneself was explicit, consistent with previous studies that only positive aspects of the self are prioritized [@Hu_2020_goodme]. More importantly, the effect persisted even when the relationship between moral character and oneself was task-irrelevant, indicating  an implicit self-referencing process emerged from presenting good character and self-related information in the same display. A possible explanation for this spontaneous self-referencing of good character is that the positive moral self-view is central to our identity [@freitas_origins_2017; @strohminger_true_2017] and the motivation to maintain a moral self-view influences how we perceive [e.g., @Ma_JEPHPP_2010] and remember [e.g., @carlson_nat_comm_2020; @stanley_remembering_2019], with implications for the quality of life and wellbeing. 
 
 Although the results here revealed the prioritization of good character in perceptual decision-making, we did not claim that the motivation of a moral self-view *penetrates* perception. The perceptual decision-making process involves processes more than just encoding the sensory inputs [@scheller_power_2022]. To fully account for the nuance of behavioral data and/or related data collected from other modules [e.g., @sui_electrophysiological_2023], we may need computational models and an integrative experimental approach [@Almaatouq_BBS_2022]. For example, sequential sampling models suggest that, when making a perceptual decision, the agent continuously accumulates evidence until the amount of evidence passes a threshold, and then a decision is made [@ratcliff_tics_2016; @forstmann_ann_rev_2016; @Hu_hitchhikers_2022]. In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory [@shadlen_decision_2016]. Recently, applications of sequential sample models to perceptual matching tasks also suggest that different processes may contribute to the prioritization effect of self [@golubickis_self-prioritization_2017] or good self [@Hu_2020_goodme]. Similarly, reinforcement learning models revealed that the initial discrimination between self- and other-referencing learning lies in the learning rate [@lockwood_neural_2018]. These investigations suggest that computational models are required to disentangle the cognitive processes underlying the prioritization of good character.
 
