--- a/general_method.rmd
+++ b/general_method.rmd
@@ -4,7 +4,7 @@ This series of experiments used the perceptual matching paradigm (or self-taggin
 
 Experiments 1a, 1b, 1c, 2, 5, and 6a were designed to explore and confirm the effect of moral character on perceptual matching. All these experiments shared a 2 (matching: match vs. mismatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series of studies, which aimed to examine the prioritization of moral character and found that shapes associated with good character were prioritized. Experiments 1b, 1c, and 2 were to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect was contaminated by familiarity. Experiment 1c manipulated the moral character indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembering the association, they then associated the names with different shapes and finished the perceptual matching task. Experiment 2 further tested whether the way we presented the stimuli influenced the prioritization of moral character, by sequentially presenting labels and shapes instead of simultaneous presentation. Note that a few participants in Experiment 2 also participated in Experiment 1a because we originally planned a cross-task comparison. Experiment 5 was designed to compare the prioritization of good character with other important social values (aesthetics and emotion). All social values had three levels, positive, neutral, and negative, and were associated with different shapes. Participants finished the associative learning task for different social values in different blocks, and the order of the social values was counterbalanced. Only the data from moral character blocks, which shared the design of experiment 1a, were reported here. Experiment 6a, which shared the same design as Experiment 2, was an EEG experiment aimed at exploring the neural mechanism of the prioritization of good character. Only behavioral results of Experiment 6a were reported here.
 
-Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence account or by the self-binding account. For this purpose, we included self-reference as another within-subject variable. For example, Experiment 3a extended Experiment 1a into a 2 (matching: match vs.mismatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in Experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on Experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), participants finished Experiment 6b in two days. On the first day, participants completed the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to test whether the effect found in Experiments 3a and 6b is robust if we separately present the self-referencing trials and other-referential trials. That is, participants finished two types of blocks: in the self-referencing blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referential blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
+Experiments 3a, 3b, and 6b were designed to test whether the prioritization of good character can be explained by the valence account or by the self-binding account. For this purpose, we included self-reference as another within-subject variable. For example, Experiment 3a extended Experiment 1a into a 2 (matching: match vs.mismatch) by 2 (reference: self vs. other) by 3 (moral character: good vs. neutral vs. bad) within-subject design. Thus, in Experiment 3a, there were six conditions (good-self, neutral-self, bad-self, good-other, neutral-other, and bad-other) and six shapes (triangle, square, circle, diamond, pentagon, and trapezoids). Experiment 6b was an EEG experiment based on Experiment 3a but presented the label and shape sequentially. Because of the relatively high working memory load (six label-shape pairs), participants finished Experiment 6b in two days. On the first day, participants completed the perceptual matching task as a practice, and on the second day, they finished the task again while the EEG signals were recorded. We only focus on the first day's data here. Experiment 3b was designed to test whether the effect found in Experiments 3a and 6b is robust if we separately present the self-referencing trials and other-referencing trials. That is, participants finished two types of blocks: in the self-referencing blocks, they only made matching judgments to shape-label pairs that related to the self (i.e., shapes and labels of good-self, neutral-self, and bad-self), in the other-referencing blocks, they only responded to shape-label pairs that related to the other (i.e., shapes and labels of good-other, neutral-other, and bad-other).
 
 Experiments 4a and 4b were designed to test whether the self and the good character bind spontaneously. In Experiment 4a, participants were instructed to learn the association between two shapes (circle and square) with two labels (self vs. other) in the learning stage. In the test stage, they were instructed only respond to the shape and label during the test stage. However, we presented the labels of different moral characters in the shapes and instructed participants to ignore these labels when making matching judgments. If the self and good character bind together spontaneously, then the mere presence of good character will facilitate the response to shapes associated with the self. In the Experiment 4b, we reversed the role of self and moral character in the task: Participants learned associations between three moral labels (good-person, neutral-person, and bad-person) and three shapes (circle, square, and triangle) and made matching judgments about the shape and label of moral character, while words related to identity, "self" or "other", were presented within the shapes. As in Experiment 4a, participants were told to ignore the words inside the shape during the perceptual matching task. In the same vein, if the self and good character bind together spontaneously, then the mere presence of the self will facilitate the response to shapes associated with good character. 
 
@@ -46,7 +46,7 @@ The reparameterized value of $p_{ij}$ is a linear regression of the independent 
 $$ \Phi(p_{ij}) = 0 + \beta_{0j}Valence_{ij} + \beta_{1j}IsMatch_{ij} * Valence_{ij}$$
 where the probits (z-scores; $\Phi$, "Phi") of $p$s is used for the regression. 
 
-The subjective-specific intercepts ($\beta_{0} = -zFAR$) and slopes ($\beta_{1} = d'$) are described by multivariate normal with means and a covariance matrix for the parameters.
+The participant-specific intercepts ($\beta_{0} = -zFAR$) and slopes ($\beta_{1} = d'$) are described by multivariate normal with means and a covariance matrix for the parameters.
 $$ \begin{bmatrix}\beta_{0j}\\
 \beta_{1j}\\
 \end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
@@ -57,15 +57,16 @@ We used the following formula for Experiments 1a, 1b, 1c, 2, 5, and 6a, which ha
 
 `saymatch ~ 0 + Valence + Valence:ismatch + (0 + Valence + Valence:ismatch | Subject) + (0 + Valence + Valence:ismatch | ExpID_new:Subject), family = bernoulli(link="probit")`
 
-in which the `saymatch` is the response data whether participants pressed the key corresponding to “match”, `mismatch` is the independent variable of matching, `Valence` is the independent variable of moral character, `Subject` is the index of participants, and `Exp_ID_new` is the index of different experiments. Not that we distinguished data collected from two universities.
+in which the `saymatch` is the response data whether participants pressed the key corresponding to “match”, `mismatch` is the independent variable of matching, `Valence` is the independent variable of moral character, `Subject` is the index of participants, and `Exp_ID_new` is the index of different experiments. Note that we distinguished data collected from two universities.
 
 For experiments 3a, 3b, and 6b, an additional variable, i.e., reference (self vs. other), was included in the formula:
 
 `saymatch ~ 0 + ID:Valence + ID:Valence:ismatch + (0 + ID:Valence + ID:Valence:ismatch | Subject) + (0 + ID:Valence + ID:Valence:ismatch | ExpID_new:Subject), family = bernoulli(link="probit")`
-in which the `ID` is the independent variable “reference”, which means whether the stimulus was self-referencing or other-referential.
+
+in which the `ID` is the independent variable “reference”, which means whether the stimulus was self-referencing or other-referencing.
 
 ### Reaction times
-We used log-normal distribution (https://lindeloev.github.io/shiny-rt/#34_(shifted)_log-normal) to model the RT data. This means we need to estimate the posterior of two parameters: $\mu$, and $\sigma$. $\mu$ is the mean of the `logNormal` distribution, and $\sigma$ is the disperse of the distribution. 
+We used log-normal distribution to model the RT data (see https://lindeloev.github.io/shiny-rt/#34_(shifted)_log-normal). This means we need to estimate the posterior of two parameters: $\mu$, and $\sigma$. $\mu$ is the mean of the `logNormal` distribution, and $\sigma$ is the disperse of the distribution. 
 
 The reaction time of the $j$th subject on $i$th trial, $y_{ij}$,  is log-normal distributed:
 $$ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})$$ 
@@ -76,7 +77,7 @@ $$\mu_{j} = \beta_{0j} + \beta_{1j}*IsMatch_{ij} * Valence_{ij}$$
 and the parameter $\sigma_{j}$ does not vary with independent variables:
 $$\sigma_{j} \sim HalfNormal()$$
 
-The subjective-specific intercepts ($\beta_{0j}$) and slopes ($\beta_{1j}$) are described by multivariate normal with means and a covariance matrix for the parameters.
+The participant-specific intercepts ($\beta_{0j}$) and slopes ($\beta_{1j}$) are described by multivariate normal with means and a covariance matrix for the parameters.
 $$ \begin{bmatrix}\beta_{0j}\\
 \beta_{1j}\\
 \end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
@@ -86,10 +87,11 @@ $$ \begin{bmatrix}\beta_{0j}\\
 The formula used for experiments 1a, 1b, 1c, 2, 5, and 6a, which have a 2 (matching: match vs. non-match) by 3 (moral character: good vs. neutral vs. bad) within-subject design, is as follows:
 
 `RT_sec ~ 1 + Valence*ismatch + (Valence*ismatch | Subject) + (Valence*ismatch | ExpID_new:Subject), family = lognormal()`
+
 in which `RT_sec` is the reaction times data with the second as a unit. The other variables in this formula have the same meaning as the response data. 
 
 For experiments 3a, 3b, and 6b, which have a 2 by 2 by 3 within-subject design, the formula is as follows: 
-`RT_sec ~ 1 + ID*Valence + (ID*Valence | Subject) + (ID*Valence | ExpID_new:Subject), family = lognormal()` 
+`RT_sec ~ 1 + ID*Valence + (ID*Valence | Subject) + (ID*Valence | ExpID_new:Subject), family = lognormal()` .
 
 Note that for experiments 3a, 3b, and 6b, the three-level model for reaction times only included the matched trials to avoid divergence when estimating the posterior of the parameters.
 
@@ -100,7 +102,7 @@ To test hypotheses, we used the Sequential Effect eXistence and sIgnificance Tes
 We tested whether moral characters are prioritized by examining the population-level effects (also called fixed effect) of the three-level Bayesian hierarchical model of Experiments 1a, 1b, 1c, 2, 5, and 6a. More specifically, we calculated the differences between the posterior distributions of the good/bad character and the neutral character and then tested these posterior distributions with the SEXIT approach. 
 
 #### Modulation of self-relevance
-We tested the modulation effect of the self-referencing process by examining the interaction between moral character and the self-referencing process for the three-level Bayesian hierarchical model of Experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: the valence effect alone or an interaction between the valence effect and self-relevance. If the former is correct, then there will be no interaction between moral character and self-relevance, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referential conditions. Otherwise, there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referencing conditions. To test the interaction, we calculated the posterior distribution of the difference of difference: $(good - neutral)_{self}$ vs. $(good - neutral)_{other}$. We then tested the difference of difference with SEXIT approach.
+We tested the modulation effect of the self-referencing process by examining the interaction between moral character and the self-referencing process for the three-level Bayesian hierarchical model of Experiments 3a, 3b, and 6b. More specifically, we tested two possible explanations for the prioritization of good character: the valence effect alone or an interaction between the valence effect and self-relevance. If the former is correct, then there will be no interaction between moral character and self-relevance, i.e., the prioritization effect exhibits a similar pattern for both self- and other-referencing conditions. Otherwise, there will be an interaction between the two factors, i.e., the prioritization effect exhibits different patterns for self- and other-referencing conditions. To test the interaction, we calculated the posterior distribution of the difference of difference: $(good - neutral)_{self}$ vs. $(good - neutral)_{other}$. We then tested the difference of difference with SEXIT approach.
 
 #### Spontaneous binding between the self and good character
 For data from Experiments 4a and 4b, we further examined whether the self-referencing process is spontaneous (i.e., whether the good character is spontaneously bound with the self). For Experiment 4a, if there exists a spontaneous binding between self and good character, there should be an interaction between moral character and self-relevance. More specifically, we tested the posterior distributions of $good_{self} - neutral_{self}$ and $good_{other} - neutral_{other}$, as well as the difference between these differences with the SEXIT framework. For Experiment 4b, if there exists a spontaneous binding between self-relevance and good character, then, there will be a self-other difference for some moral character conditions but not for other moral character conditions. More specifically, we tested the posteriors of $good_{self} - good_{other}$, $neutral_{self} - neutral_{other}$, and $bad_{self} - bad_{other}$ as well as the difference between them with SEXIT framework.
